# solo2

./: .gitlab-ci.yml  Cargo.toml  nk3-quickstart.md
components/apps/: Cargo.toml
components/apps/src/: lib.rs
components/nfc-device/src/: iso14443.rs
components/provisioner-app/: Cargo.toml
components/provisioner-app/src/: apdu.rs  ctaphid.rs  lib.rs
components/usbd-ccid/src/: class.rs  pipe.rs
components/usbd-ctaphid/src/: class.rs  pipe.rs
runners/embedded/src/: lib.rs  types.rs
runners/embedded/src/soc_lpc55/: init.rs
runners/embedded/src/types/: usbnfc.rs
runners/lpc55/src/: types.rs
runners/usbip/: Cargo.toml
runners/usbip/src/: main.rs
